--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
-    "next": "^13.4.13",
+    "next": "^14.2.4",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
+    "styled-components": "^6.1.11",
     "tailwindcss": "3.3.3"
   }
 }
